tests/should_fail/match_struct_field_type_mismatch_int.nv
module fail
struct Config { name: String, count: Int }
// Int literal in String field — type mismatch
let c = Config("test", 5)
let r = match c {
    Config { name: 42, count } => "bad",
    _ => "ok",
}
